removed locking behavior from embedded engine